--- a/localisation/dec1_countries_l_english.yml
+++ b/localisation/dec1_countries_l_english.yml
@@ -106,7 +106,7 @@
  FRL_ADJ: "Frisian"
  BVE: "Bremen-Verden"
  BVE_ADJ: "Bremian"
- AEH: "Austrian Empire"                                 
+ AEH: "Austrian Empire"
  AEH_ADJ: "Austrian"
  AHE: "Austro-Hungarian Empire"
  AHE_ADJ: "Austro-Hungarian"
@@ -142,6 +142,18 @@
  CSA_ADJ: "Confederate"
  DUM: "Dual Monarchy"
  DUM_ADJ: "Anglois"
+ SRE: "Serbian Empire"
+ SRE_ADJ: "Serbian"
+ WNE: "Wendish Empire"
+ WNE_ADJ: "Wendish"
+ HNE: "Hungarian Empire"
+ HNE_ADJ: "Hungarian"
+ NAZ: "German Reich"
+ NAZ_ADJ: "Nazi"
+ MGS: "Madagascar"
+ MGS_ADJ: "Malagasy"
+ OCT: "Occitania"
+ OCT: "Occitan"
  # Vanilla Countries
  ARB: "Arabian Empire"
  ARB_ADJ: "Arabian"
@@ -150,4 +162,4 @@
  GER: "Kingdom of Germany"
  GER_ADJ: "German"
  KOG: "Kingdom of God"
- KOG_ADJ: "Papal" 
+ KOG_ADJ: "Papal"
