--- a/localisation/dec1_ideas_l_english.yml
+++ b/localisation/dec1_ideas_l_english.yml
@@ -1122,6 +1122,24 @@
  SRB_unified_army: "Unified Army"
  SRB_unified_army_desc: "§RDescription Available in 4.1.0§!"
 
+ SRE_ideas: "Serbian Empire Ideas"
+ SRE_ideas: "Serbian Empire Traditions"
+ SRE_ideas: "Serbian Empire Ambitions"
+ SRE_seizure_of_territory: "Seizure of Territory"
+ SRE_seizure_of_territory_desc: "§RDescription Available in 4.1.0§!"
+ SRE_rule_of_stefan_dusan: "Rule of Stefan Dusan"
+ SRE_rule_of_stefan_dusan_desc: "§RDescription Available in 4.1.0§!"
+ SRE_protectorates_of_serbia: "Protectorates of Serbia"
+ SRE_protectorates_of_serbia_desc: "§RDescription Available in 4.1.0§!"
+ SRE_reign_in_our_falling_empire: "Reign in our Falling Empire"
+ SRE_reign_in_our_falling_empire_desc: "§RDescription Available in 4.1.0§!"
+ SRE_zakonopravilo: "Zakonopravilo"
+ SRE_zakonopravilo_desc: "§RDescription Available in 4.1.0§!"
+ SRE_serbian_orthodox_church: "Serbian Orthodox Church"
+ SRE_serbian_orthodox_church_desc: "§RDescription Available in 4.1.0§!"
+ SRE_the_balkan_empire: "The Balkan Empire"
+ SRE_the_balkan_empire_desc: "§RDescription Available in 4.1.0§!"
+
  SBG_ideas: "Siebenbuergen Ideas"
  SBG_ideas_start: "Siebenbuergen Traditions"
  SBG_ideas_bonus: "Hungarian Purge"
