--- a/localisation/dec1_decisions_l_english.yml
+++ b/localisation/dec1_decisions_l_english.yml
@@ -47,7 +47,7 @@
     austrian_empire_nation_desc: "The Austrian Empire was a Central European multinational great power from 1804 to 1867, created by proclamation out of the realms of the Habsburgs.\n\nDuring its existence, it was the third most populous empire after the Russian Empire and the United Kingdom in Europe.\n\nAlong with Prussia, it was one of the two major powers of the German Confederation."
 
     austro_hungarian_empire_nation_title: "@AHE The Austro-Hungarian Empire"
-    austro_hungarian_empire_nation_desc: "Austria-Hungary, often referred to as the Austro-Hungarian Empire or the Dual Monarchy, was a constitutional monarchy in Central and Eastern Europe between 1867 and 1918.\n\nIt was formed when the Austrian Empire adopted a new constitution; as a result Austria and Hungary were placed on equal footing.\n\nThe Austro-Hungarian Empire was dissolved into several new states at the end of the First World War." 
+    austro_hungarian_empire_nation_desc: "Austria-Hungary, often referred to as the Austro-Hungarian Empire or the Dual Monarchy, was a constitutional monarchy in Central and Eastern Europe between 1867 and 1918.\n\nIt was formed when the Austrian Empire adopted a new constitution; as a result Austria and Hungary were placed on equal footing.\n\nThe Austro-Hungarian Empire was dissolved into several new states at the end of the First World War."
 
     balkan_league_nation_title: "@BKL The Balkan League"
     balkan_league_nation_desc: "The Balkan League is a the union between all major baltic powers into a single political entity; allowing us to defend our home from the great powers who seek to conquer our lands for themselves."
@@ -148,7 +148,7 @@
     georgia_nation_desc: "Ever since the abdication of Alexander I, Georgia has been divided and devastated by in-fighting.. this has allowed other countries to control the internal politics of the region and oppress our people.\n\nThe time has come to once again unite the Georgian people and reforge the kingdom that was once lost!"
 
     goguryeo_nation_title: "@GKR Restore the Goguryeo Kingdom"
-    goguryeo_nation_desc: "Goguryeo, also called Goryeo, was a Korean kingdom located in the northern and central parts of the Korean Peninsula and the southern and central parts of Manchuria.\n\nAt its peak of power, Goguryeo controlled most of the Korean peninsula, large parts of Manchuria and parts of the Russian Far East and eastern Mongolia." 
+    goguryeo_nation_desc: "Goguryeo, also called Goryeo, was a Korean kingdom located in the northern and central parts of the Korean Peninsula and the southern and central parts of Manchuria.\n\nAt its peak of power, Goguryeo controlled most of the Korean peninsula, large parts of Manchuria and parts of the Russian Far East and eastern Mongolia."
 
     hanseatic_league_nation_title: "@HNS The Hanseatic League"
     hanseatic_league_nation_desc: "The Hanseatic League was a commercial and defensive confederation of merchant guilds and market towns in Northwestern and Central Europe. Growing from a few North German towns in the late 1100s, the league came to dominate Baltic maritime trade for three centuries along the coasts of Northern Europe. Hansa territories stretched from the Baltic to the North Sea and inland during the Late Middle Ages."
@@ -199,37 +199,40 @@
     maghrebia_nation_desc: "Maghreb; also spelled Maghrib, region of North Africa bordering the Mediterranean Sea.\n\nThe Africa Minor of the ancients, it at one time included Moorish Spain and now comprises essentially the Atlas Mountains and the coastal plain of Morocco, Algeria, Tunisia, and Libya."
 
     north_german_confederation_nation_title: "@NGC Proclaim the North German Confederation"
-    north_german_confederation_nation_desc: "This mighty nation unites Northern Germany. With deligance and a lot of ambition the Germans have created such a gigantic state from small dukedoms." 
+    north_german_confederation_nation_desc: "This mighty nation unites Northern Germany. With deligance and a lot of ambition the Germans have created such a gigantic state from small dukedoms."
 
     south_german_federation_nation_title: "@SGF Establish the South German Federation"
-    south_german_federation_nation_desc: "We have established much as of late and should now begin the process to reforming into a Republic and uniting the German people into a new Federation!"  
+    south_german_federation_nation_desc: "We have established much as of late and should now begin the process to reforming into a Republic and uniting the German people into a new Federation!"
 
     north_sea_empire_nation_denmark_title: "@NSE The North Sea Empire under Danish Rule"
     north_sea_empire_nation_denmark_desc: "North Sea Empire and Anglo-Scandinavian Empire are terms used by historians to refer to the personal union of the kingdoms of England, Denmark and sometimes Norway for most of the period between 1013 and 1042 towards the end of the Viking Age.\n\nThis ephemeral Norse-ruled empire was a thalassocracy, its components only connected by and dependent upon the sea."
 
     peoples_republic_of_china_nation_title: "@PRC Proclaim the People's Republic"
-    peoples_republic_of_china_nation_desc: "The People's Republic of China was formally proclaimed by Mao Zedong, the Chairman of the Communist Party of China, on 1 October 1949 at 3:00 pm in Tiananmen Square in Beijing while the new capital Nanking had been the capital of the former Republic of China." 
+    peoples_republic_of_china_nation_desc: "The People's Republic of China was formally proclaimed by Mao Zedong, the Chairman of the Communist Party of China, on 1 October 1949 at 3:00 pm in Tiananmen Square in Beijing while the new capital Nanking had been the capital of the former Republic of China."
 
     pontus_nation_title: "@PON Restoration of the Kingdom of Pontus"
     pontus_nation_desc: "Through conquest and diplomacy we're able to form a county for all Pontic-Greek people living at the Black Sea." 
 
     rhine_confederation_nation_title: "@RHE The Rhine Confederation"
-    rhine_confederation_nation_desc: "Napoleon had annexed for France all the left bank of the Rhine, but the new Confederation gradually extended from the Rhine to the Elbe.\n\nIt was at first welcomed by the German people as a step towards unity, but it was really a barrier against Prussian and Austrian power." 
+    rhine_confederation_nation_desc: "Napoleon had annexed for France all the left bank of the Rhine, but the new Confederation gradually extended from the Rhine to the Elbe.\n\nIt was at first welcomed by the German people as a step towards unity, but it was really a barrier against Prussian and Austrian power."
 
     saudi_nation_title: "@SRB House of Saud"
     saudi_nation_desc: "The House of Saud conquered many lands during the crisis of the Arabian peoples after the fall of the Ottoman Empire.\n\nThrough conquest and diplomacy we can claim the title of King of Arabians under the Saudi Dynasty!"
 
+    serbian_empire_nation_title: "@SRE The Serbian Empire"
+    serbian_empire_nation_desc: "The Serbian Empire was an empire that ruled the Balkans and emerged from the medieval Serbian kingdom in the fourteenth century and existed from 1346 to 1371 being one of the larger states in Europe."
+
     siebenbuergen_nation_title: "@SBG Siebenbuergen"
-    siebenbuergen_nation_desc: "Siebenbuergen means 'Seven Castles', named after the seven Transylvanian Saxons' cities.\n\nWith the formation of a unified state through both diplomatic and militaristic means we are able to establish a new state based upon the foundation of our Germanic legacy." 
+    siebenbuergen_nation_desc: "Siebenbuergen means 'Seven Castles', named after the seven Transylvanian Saxons' cities.\n\nWith the formation of a unified state through both diplomatic and militaristic means we are able to establish a new state based upon the foundation of our Germanic legacy."
 
     swabia_nation_title: "@SWA The Swabian Kingdom"
     swabia_nation_desc: "The foundation of the Kingdom Swabia unites the hostile countries in the southern Holy Roman Empire. the country attains an important and mighty position in the empire in only few years."
 
     sweden_norway_nation_title: "@SNO Sweden-Norway"
-    sweden_norway_nation_desc: "Sweden and Norway had been united under the same crown on two occasions: from 1319 to 1343 and briefly from 1449 to 1450 in opposition to Christian of Oldenburg who was elected king of the Kalmar Union by the Danes." 
+    sweden_norway_nation_desc: "Sweden and Norway had been united under the same crown on two occasions: from 1319 to 1343 and briefly from 1449 to 1450 in opposition to Christian of Oldenburg who was elected king of the Kalmar Union by the Danes."
 
     soviet_union_nation_title: "@SOV The Soviet Union"
-    soviet_union_nation_desc: "The Soviet Union (short for the Union of Soviet Socialist Republics or USSR) is a single-party Marxist–Leninist state.\n\nIt was the first country to declare itself socialist and build towards a communist society and was a union of 14 Soviet Socialist Republics and one Soviet Federative Socialist Republic." 
+    soviet_union_nation_desc: "The Soviet Union (short for the Union of Soviet Socialist Republics or USSR) is a single-party Marxist–Leninist state.\n\nIt was the first country to declare itself socialist and build towards a communist society and was a union of 14 Soviet Socialist Republics and one Soviet Federative Socialist Republic."
 
     tatarstan_nation_title: "@TAT Tatarstan"
     tatarstan_nation_desc: "The Tatars are Turkic ethnic group native to Tatarstan and wider Volga region. They speak Tatar, a Kipchak Turkic language. The vast majority of Tatars today reside in post-Soviet countries, primarily in Russia, Uzbekistan and Ukraine."
@@ -238,7 +241,7 @@
     turkey_nation_desc: "The Republic of Turkey was created after the overthrow of Sultan Mehmet VI Vahdettin by the new Republican Parliament in 1922.\n\nThis new regime delivered the coup de grâce to the Ottoman state which had been practically wiped away from the world stage following the First World War."
 
     turkey_nation_ottomans_title: "@TRR The Turkish Republic"
-    turkey_nation_ottomans_desc: "The Republic of Turkey was created after the overthrow of Sultan Mehmet VI Vahdettin by the new Republican Parliament in 1922.\n\nThis new regime delivered the coup de grâce to the Ottoman state which had been practically wiped away from the world stage following the First World War." 
+    turkey_nation_ottomans_desc: "The Republic of Turkey was created after the overthrow of Sultan Mehmet VI Vahdettin by the new Republican Parliament in 1922.\n\nThis new regime delivered the coup de grâce to the Ottoman state which had been practically wiped away from the world stage following the First World War."
 
     two_sicilies_nation_title: "@TTS Unite the Two Sicilies"
     two_sicilies_nation_desc: "The Kingdom of Two Sicilies is the union between the Kingdom Sicily and the Kingdom Naples. Together these kingdoms can compete with the Spaniards just as with other Italians."
@@ -247,7 +250,7 @@
     united_kingdom_nation_desc: "The United Kingdom of Great Britain and Ireland was a sovereign state established by the Acts of Union 1800, which merged the kingdoms of Great Britain and Ireland"
 
     united_kingdom_nation_england_title: "@UKI The United Kingdom"
-    united_kingdom_nation_england_desc: "The United Kingdom of Great Britain and Ireland was a sovereign state established by the Acts of Union 1800, which merged the kingdoms of Great Britain and Ireland" 
+    united_kingdom_nation_england_desc: "The United Kingdom of Great Britain and Ireland was a sovereign state established by the Acts of Union 1800, which merged the kingdoms of Great Britain and Ireland"
 
     united_kingdom_nation_gb_title: "@UKI The United Kingdom"
     united_kingdom_nation_gb_desc: "The United Kingdom of Great Britain and Ireland was a sovereign state established by the Acts of Union 1800, which merged the kingdoms of Great Britain and Ireland"
@@ -260,8 +263,25 @@
 
     brandenburg_prussia_nation_title: "@BRP Brandenburg-Prussia"
     brandenburg_prussia_nation_desc: "Based in the Electorate of Brandenburg, the main branch of the Hohenzollern intermarried with the branch ruling the Duchy of Prussia, and secured succession upon the latter's extinction in the male line in 1618. Another consequence of the intermarriage was the incorporation of the lower Rhenish principalities of Cleves, Mark and Ravensberg after the Treaty of Xanten in 1614."
-    
+
+    wendish_empire_nation_title: "@WNE Wendish Empire"
+    wendish_empire_nation_desc: ""
+
+    hungarian_empire_nation_title: "@HNE The Hungarian Empire"
+    hungarian_empire_nation_desc: ""
+
+    german_reich_nation_title: "@NAZ The German Reich"
+    german_reich_nation_desc: ""
+
+    madagascar_nation_title: "@MGS Unite the Merina Kingdom"
+    madagascar_nation_desc: ""
+
+    occitania_nation_title: "@OCT Occitania"
+    occitania_nation_desc: ""
+
+      ############################
       # Reworked Vanilla Nations #
+      ############################
 
     algiers_nation_title: "@ALG Emirate of Algiers"
     algiers_nation_desc: "The central part of the Maghreb has always been subjected to the whims of more powerful states based in the east or west. We must not allow history to repeat itself. By seizing the great port of Al-Djazair as well as some of the other important coastal cities in the region we can lay the foundation of a strong united state with a maritime focus which will allow us to surpass our historical enemies in the east and west."
@@ -292,7 +312,7 @@
 
     great_britain_nation_title: "@GBR Form Great Britain"
     great_britain_nation_desc: "The Treaty of Union specified the name of the new all-island state as "Great Britain", while describing it as "One Kingdom". therefore, the all-island state that existed between 1707 and 1800 is "Great Britain" or the "Kingdom of Great Britain"."
-    
+
     great_britain_england_nation_title: "@GBR Form Great Britain"
     great_britain_england_nation_desc: "The Treaty of Union specified the name of the new all-island state as "Great Britain", while describing it as "One Kingdom". therefore, the all-island state that existed between 1707 and 1800 is "Great Britain" or the "Kingdom of Great Britain"."
 
@@ -301,7 +321,7 @@
 
     unite_italian_nation_title: "@ITA Risorgimento"
     unite_italian_nation_desc: "As the heart of the Renaissance, our nation is blossoming culturally.\n\nWe have just entered the beginning of what looks like a prolonged artistic rebellion, especially in the field of architecture and literature.\n\nThe cultural evolution is not aiding our country in maintaining peace within our borders however. \n\nOur country is continuously stricken by foreign states seeking power and territorial gain."
-    
+
     kingdom_of_prussia_nation_brandenburg_title: "@PRU A Prussian King"
     kingdom_of_prussia_nation_brandenburg_desc: "There is only one king in the Empire, the king of Brandenburg. At the same time our lands in Prussia are not a historic part of the Empire, let us declare ourselves King in Prussia to reflect our grander status than the other electors."
 
@@ -334,7 +354,7 @@
 
     spanish_nation_aragon_wedding_title: "@SPA Aragon-Castile Union"
     spanish_nation_aragon_wedding_desc: "The marriage of Ferdinand II of Aragon and Isabella I of Castile, in 1469 at the Palacio de los Vivero in Valladolid began the familial union of the two kingdoms. They became known as the Catholic Monarchs (los Reyes Católicos). Isabella succeeded her brother as Queen of Castile and Ferdinand became jure uxoris King of Castile in 1474 creating for the first time since the 8th century a single political unit, referred to as España (Spain)"
-    
+
     tibetan_nation_title: "@TIB State of Lhasa"
     tibetan_nation_desc: "With Güshi Khan as a largely uninvolved devotee, the 5th Dalai Lama and his intimates especially Sonam Rapten (until his death in 1658) established a civil administration which is referred to by historians as the Lhasa state. This Tibetan regime or government is also referred to as the Ganden Phodrang."
 
